--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html ng-app="hikeApp">
    <head>
-      <title>Hiking App</title>
-      <link rel="stylesheet" href="./dist/styles.css">
+      <title>instaHike</title>
+      <link rel="stylesheet" href="./styles.css">
       <link href="https://fonts.googleapis.com/css?family=Crete+Round|Merriweather|Open+Sans|Gentium+Basic|Patua+One|Amatic+SC|Anton|Fjalla+One|Shadows+Into+Light|Roboto|Oswald|Roboto+Condensed|Alegreya:700" rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    </head>
@@ -16,6 +16,6 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular-animate.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
-      <script src="./dist/bundle.js"></script>
+      <script src="./bundle.js"></script>
    </body>
 </html>
