Navigation is more adapted for mobile.  Features a hamburger menu and a slick animation.

--- a/public/nav/navTemplate.html
+++ b/public/nav/navTemplate.html
@@ -12,4 +12,6 @@
          <li ng-if="user" ui-sref="profile"><img ng-src="{{user.userimage}}"></li>
       </ul>
    </nav>
+   <ham-dir></ham-dir>
+   <mobile-menu></mobile-menu>
 </div>
