--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html ng-app="hikeApp">
    <head>
       <title>instaHike</title>
+      <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
       <link rel="stylesheet" href="./styles.css">
       <link href="https://fonts.googleapis.com/css?family=Crete+Round|Merriweather|Open+Sans|Gentium+Basic|Patua+One|Amatic+SC|Anton|Fjalla+One|Shadows+Into+Light|Roboto|Oswald|Roboto+Condensed|Alegreya:700" rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -12,10 +13,11 @@
          <ui-view></ui-view>
       </div>
       <footer-dir></footer-dir>
-      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular-animate.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
+      <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClM8-i8D_MjoWEhZjPGBNSlBCWijkDv6c"></script>-->
       <script src="./bundle.js"></script>
    </body>
 </html>
